FIX: content jumping
* gender select
* measurement area

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -93,6 +93,7 @@
       cursor: pointer;
       padding: 0 $standard-padding/2 $standard-padding/2;
       margin-bottom: -50px;
+      height: 440px;
     }
     &.logo{
       max-width: 27px;
