--- a/app/assets/stylesheets/styleguide.scss
+++ b/app/assets/stylesheets/styleguide.scss
@@ -181,6 +181,7 @@ p{
    max-width: 80px;
    position: relative;
    font-size: 16px;
+   height: 34px;
    @media (max-width: $screen-xs-max) {
      top: auto !important;
      right: auto !important;
